@@ -164,6 +164,7 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 	  (STR #3143).
 	- Fixed a regression: restore the possibility to call
 	  fl_draw_image(buf,X,Y,W,H,D,L) with negative D and/or L arguments.
+	- Fixed overflow in Fl_Valuator::precision(int) to 0...9 (STR #3280).
 
 
 CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014
